css/styles.css
*{
    box-sizing: border-box;  
} 

html {
    scroll-behavior: smooth;
  }

body{
    font: normal 18px "Arial", sans-serif ;
    text-align: center;
    color: #1B4079;
    background-color: #92DCE5;
}



/* Nav Bar */
ul{
    list-style: none;
}

#navbar{
    display: grid;
    z-index: 1;
    top: 75px;
    left: 0;
    right: 0;
    vertical-align: middle;
    overflow-y: hidden;
    text-decoration-color: turquoise;
    cursor: pointer;
    opacity: 1;
    justify-content: center;
    margin: -7rem;
}

#navbar ul li a{
    color: #A93F55;
    justify-content: center;
    align-items: center;
    margin: -1%;
    display: flex;
    width: 100%;
    height: 100%;
}

#navbar a:hover{
    color: white;
    opacity: 0.5;
}

.round{
    border: 6px solid #000000;
    border-radius: 50%;
}

/*
ul.grid {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}
*/


/* Hero */
.hero { 
    background-color: #061555ca;
    padding: 10rem 3rem 0;
    position: relative;
    justify-content: center;
    min-height: 10px;
    color: #fff;
    text-align: center;
}


.hero .hero-boba{
    position: relative;
    top:0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
    
    background-color: #1A77C1;
}

.hero .hero-boba:after{
    content: '';
    position: fixed;
    top: 0;
    left: 0;
    
}


/* Header */

header{
    display: flex;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    align-items: center;
    justify-content: space-around;
    padding: 40px 50px 25px;
    color: #A93F55;
    background-color: rgba(0, 0, 0, .7);
    z-index: 10;
}

header h2{
    font-family:  normal 35px "Arial", serif;
}

header nav{
    display: flex;
}

header nav li a{
    margin: auto 15px;
}

header nav li:first-child{
    margin-left: 0;
}

header nav li:last-child{
    margin-right: 0;
}




@media(max-width: 1000px){
    header{
        padding: 20px 50px;
       
    }
}

@media(max-width: 700px){
    header{
        flex-direction: column;
    }
    header h2{
        margin-bottom: 10px;
    }
}


/* ABOUT */

.about-boba {
    border-top: 2em;
    flex-flow: row;
}

.about-boba p{
    border-bottom: 1px solid white ;
    padding: 15px 0px;
}

.about-boba .bobaimg{
    border-radius: 3px;
    justify-self: right;
}




 /*   (SAVE FOR FUTURE USE?)  */


.row{
    display: flex;
    flex-direction: row;
    justify-content: center;
}
   /*   (SAVE FOR FUTURE USE?)  */





/* Gallery */

.gallery{
    display: flex;
    background-color: #1A77C1;
  
}

.gallery .img-responsive{
    max-width: 75%;
    justify-content: center;
    
}

/*
.gallery .grid li{
    padding: 20px;
    height: 350px;
    border-radius: 3px; 
    justify-content: center;
    flex-direction: row;
    background-image: cover;
}

@media (max-width:1000px){
    .gallery .grid li{
        flex-basis: 100%;
    }
}
*/

 /*   Footer  */

 footer{
    display: flex;
    flex-direction: column;
    background-color: #A93F55;
    color: #fff;
    padding: 80px 0;
    text-align: center;
    align-items: center;
}

footer ul{
    display: flex;
    margin-bottom: 25px;
    font-size: 32px;
}

footer ul li{
    margin: 5px 20px;
}

footer ul li:first-child{
    margin-left: auto;
}

footer ul li:last-child{
    margin-right: auto;
}

footer p{
    
    font-size: 18px;
    color: rgba(255, 255, 255, .6);
    margin-bottom: 12px;
}

footer p a{
    color: #fff
}


/* Mobile Query */


@media screen and (min-width: 800px){
    .row{
        flex-direction: row;
    }

    .col{
        flex-basis: 50%;
    }
}

